Fix z-index of GoUpButton

--- a/src/components/GoUpButton/GoUpButton.module.css
+++ b/src/components/GoUpButton/GoUpButton.module.css
@@ -5,6 +5,7 @@
   bottom: 1rem;
   justify-content: center;
   align-items: center;
+  z-index: 200;
   cursor: pointer;
   box-shadow:
     rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
